fix(textblock): On Wasm, the `<TextBlock>` were not properly displaying the ellipsis on text overflow, because the CSS requires the overflow: hidden to be applied.

--- a/src/Uno.UI/WasmCSS/Uno.UI.css
+++ b/src/Uno.UI/WasmCSS/Uno.UI.css
@@ -108,6 +108,9 @@ embed.uno-frameworkelement.uno-unarranged {
   -ms-background-clip: text !important;
   -webkit-background-clip: text !important;
   background-clip: text !important;
+
+  /* overflow-x:hidden is required for text-overflow: ellipsis to work correctly */
+  overflow-x: hidden;
 }
 
 .uno-buttonbase {
